feat: Search page

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body, .app {
   background-size: 28px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-size: 0;
+  cursor: pointer;
 }
 
 /* search page */
@@ -101,6 +102,12 @@ body, .app {
 
 .search-books-results {
   padding: 80px 10px 20px;
+}
+
+.search-books-noresult {
+  text-align: center;
+  font-size: 1.25em;
+  color: lightgray;
 }
 
 /* books grid */
