--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ body, .app {
   justify-content: center;
   flex-wrap: wrap;
 }
-.books-grid li {
+.books-grid > li {
   padding: 10px 15px;
   text-align: left;
 }
@@ -151,21 +151,10 @@ body, .app {
   position: absolute;
   right: 0;
   bottom: -10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #60ac5d;
-  background-image: url('./icons/arrow-drop-down.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
-.book-shelf-changer select {
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  cursor: pointer;
+
+.book-shelf-changer button {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 /* book cover */
