--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ body, .app {
   padding: 10px 15px;
   text-align: left;
 }
-.dropdown-toggle.btn-success:focus, .dropdown-toggle.btn-success.focus {
+.btn-success:focus, .btn-success.focus {
   border-color: #4cae4c
 }
 
@@ -178,11 +178,18 @@ body, .app {
 /* book cover */
 
 .book-cover {
+  width: 128px;
+  height: 193px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   background: #eee;
+  cursor: pointer;
 }
 .book-cover-title {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+}
+
+.book-details-modal {
+  width: 90%
 }
